# docs/swagger.yaml
@@ -1,19 +1,15 @@
 definitions:
-  gopitman.UpdateCustomer:
+  gopitman.Essay:
     properties:
-      activated:
+      address:
         type: string
-      birthday:
+      code_object:
         type: string
-      first_name:
+      coordinates:
         type: string
-      last_name:
+      descriptions:
         type: string
-      referrer_code:
-        type: string
-      second_name:
-        type: string
-      sex:
+      title:
         type: string
     type: object
   gopitman.User:
@@ -29,21 +25,6 @@ definitions:
     - password
     - username
     type: object
-  handler.createCustomerinput:
-    properties:
-      birthday:
-        type: string
-      email:
-        type: string
-      firstName:
-        type: string
-      lastName:
-        type: string
-      phone:
-        type: string
-      referrerCode:
-        type: string
-    type: object
   handler.sigInInput:
     properties:
       password:
@@ -57,109 +38,25 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/v1/customer:
-    get:
-      consumes:
-      - application/json
-      description: Customer
-      parameters:
-      - description: Page
-        in: query
-        name: page
-        type: string
-      - description: Limit
-        in: query
-        name: limit
-        type: string
-      produces:
-      - application/json
-      responses: {}
-      security:
-      - ApiKeyAuth: []
-      summary: CustomerAll
-      tags:
-      - customer
+  /api/v1/essay:
     post:
       consumes:
       - application/json
-      description: create customer
-      operationId: create-customer
+      description: create essay
+      operationId: create-essay
       parameters:
-      - description: list info
+      - description: create essay
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/handler.createCustomerinput'
+          $ref: '#/definitions/gopitman.Essay'
       produces:
       - application/json
       responses: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Create customer
+      summary: Create Essay
       tags:
-      - customer
-  /api/v1/customer/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Customer delete
-      parameters:
-      - description: ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Customer Delete
-      tags:
-      - customer
-    get:
-      consumes:
-      - application/json
-      description: Customer get by id
-      parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Customer By Id
-      tags:
-      - customer
-    put:
-      consumes:
-      - application/json
-      description: Customer update
-      parameters:
-      - description: ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: customer info
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/gopitman.UpdateCustomer'
-      produces:
-      - application/json
-      responses: {}
-      security:
-      - ApiKeyAuth: []
-      summary: Customer Update
-      tags:
-      - customer
+      - essay
   /auth/sign-in:
     post:
       consumes:
